<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_one"
        android:contentDescription="@string/img_one" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_two"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:textSize="10pt"
        android:layout_below="@id/img_one"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/btnSignWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:padding="20dp"
            android:background="@drawable/rounded_button_white"
            android:drawableStart="@drawable/google"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/google" />

    </com.balysv.materialripple.MaterialRippleLayout>


    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"
        app:mrl_rippleColor="@color/white"
        android:layout_above="@id/btnSignWithGoogle">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:padding="20dp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_transparent" />


    </com.balysv.materialripple.MaterialRippleLayout>

    <TextView
        android:id="@+id/already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/white"
        android:textSize="6pt"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" />

</RelativeLayout>